<resources>
    <string name="app_name">Weather</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="hour_text">23:11</string>
    <string name="none_string" />
    <string name="hello_blank_fragment">Hello Fragment</string>
    <string name="detail_string">Chi tiết</string>
    <string name="humidity_string">Độ ẩm</string>
    <string name="uv_index_string">Chỉ số UV</string>
    <string name="vision_string">Tầm nhìn</string>
    <string name="dewpoint_string">Điểm sương</string>
    <string name="pressure_string">Áp suất</string>
    <string name="feeling_like_string">Cảm giác như</string>
    <string name="tab" />
    <string name="delete_string">Xóa</string>
    <string name="start_typing">Nhập địa điểm...</string>

</resources>
